[package]
name = "lstsq"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
edition = "2018"
description = "Return the least-squares solution to a linear matrix equation"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/strawlab/lstsq"
keywords = ["linear-algebra"]
categories = ["algorithms", "mathematics", "no-std", "science"]

[dependencies]
nalgebra = {version="0.28", default-features=false}

[dev-dependencies]
approx = {version="0.5", default-features=false}

[features]
default = ["std"]

std = ["nalgebra/std"]
